登录/注册功能基本实现

--- a/src/main/resources/i18n/login_en_US.properties
+++ b/src/main/resources/i18n/login_en_US.properties
@@ -3,3 +3,10 @@ login.password=password
 login.remember=remember me
 login.btn=Sign In
 login.tip=Please sign in
+signup.btn=Sign up
+signup.username=Username
+signup.admin=Administrator
+signup.user=User
+signup.tip=Please sign up
+signup.email=Email
+signup.password=Password
