--- a/src/main/resources/i18n/login.properties
+++ b/src/main/resources/i18n/login.properties
@@ -3,3 +3,10 @@ login.password=\u5BC6\u7801
 login.remember=\u8BB0\u4F4F\u6211
 login.btn=\u767B\u5F55
 login.tip=\u8BF7\u767B\u5F55
+signup.btn=\u6CE8\u518C
+signup.username=\u7528\u6237\u540D
+signup.admin=\u7BA1\u7406\u5458
+signup.user=\u7528\u6237
+signup.tip=\u8BF7\u6CE8\u518C
+signup.email=\u90AE\u7BB1
+signup.password=\u5BC6\u7801
